# lab_integral_SSE

./: .gitignore  CMakeLists.txt  README.txt  config  install.sh  main.py
src/: Function.h  IntegralCalculator.cpp  IntegralCalculator.h  TimeCounter.cpp  TimeCounter.h  main.cpp  utils.cpp  utils.h
